--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "framer-motion": "^10.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-donut-chart": "^1.3.3",
     "react-icons": "^4.10.1",
+    "react-router": "^6.14.2",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.5"
   },
